--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,9 @@
 .cover__title {
+    font-family: "Inter Black";
     margin: 0 auto;
+    text-decoration: none;
+    color: #FFFFFF;
+    display: block;
     width: 100%;
     font-size: 4.5rem;
     font-weight: 900;
