--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -5,7 +5,7 @@
 
 @media screen and (min-width: 320px) {
     .place__description {
-        margin: 32px 0 0 0;
+        margin: 32px 0 0 16px;
     }
 }
 
@@ -14,3 +14,5 @@
         margin: 0;
     }
 }
+
+
