--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -8,3 +8,15 @@
     letter-spacing: 0em;
     text-align: left;
 }
+
+@media screen and (min-width: 320px) {
+    .place__link {
+        margin: 0 0 0 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .place__link {
+        margin: 0;
+    }
+}
