--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,3 +7,15 @@
     letter-spacing: 2px;
     text-align: left;
 }
+
+@media screen and (min-width: 320px) {
+    .place__url-heading {
+        margin: 0 0 0 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .place__url-heading {
+        margin: 0;
+    }
+}
