--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,6 @@
 .footer__copyright {
     margin: 0;
+    padding: 0;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
@@ -8,7 +9,6 @@
 
 @media screen and (min-width: 320px) {
     .footer__copyright {
-        margin: 48px 0 0 16px;
         font-size: 14px;
         line-height: 14px;
     }
@@ -17,6 +17,5 @@
 @media screen and (min-width: 768px) {
     .footer__copyright {
         line-height: 16px;
-        margin: 0;
     }
 }
