--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -2,12 +2,15 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 32px 0 0 0;
+    margin: 0;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    justify-items: center;
+    justify-items: flex-start;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
 }
 
 @media screen and (min-width: 320px) {
@@ -19,7 +22,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 620px) {
     .footer__menu {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
