--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
-    margin: 92px 48px 0 48px;
-    padding: 0 0 24px 0;
+    margin: 92px auto 0 auto;
+    padding: 0 48px 24px 48px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -11,7 +11,8 @@
 
 @media screen and (min-width: 320px) {
     .footer {
-        margin: 0;
+        margin-top: 64px;
+        padding: 0 16px 24px 16px;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -19,10 +20,10 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 620px) {
     .footer {
-        margin: 88px 24px 0 24px;
-        padding: 0 0 24px 0;
+        margin-top: 88px;
+        padding: 0 24px 24px 24px;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -35,6 +36,7 @@
 
 @media screen and (min-width: 1024px) {
     .footer {
-        margin: 92px 48px 0 48px;
+        margin-top: 92px;
+        padding: 0 48px 24px 48px;
     }
 }
