--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,6 @@
 .intro {
-    margin: 92px 0 0 148px;
+    margin: 92px 0 0 0;
+    padding: 0 0 0 148px;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: minmax(288px, 720px);
@@ -8,19 +9,22 @@
 
 @media screen and (min-width: 320px) {
     .intro {
-        margin: 64px 0 0 0;
+        margin-top: 64px;
+        padding: 0 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .intro {
-        margin: 88px 24px 0 24px;
+        margin-top: 88px;
+        padding: 0 24px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .intro {
-        margin: 92px 0 0 48px;
+        margin-top: 92px;
+        padding-left: 48px;
         -ms-grid-columns: 690px;
         grid-template-columns: 690px;
     }
@@ -28,6 +32,6 @@
 
 @media screen and (min-width: 1280px) {
     .intro {
-        margin: 92px 0 0 148px;
+        padding-left: 148px;
     }
 }
