--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,18 +1,17 @@
 .place__description {
     margin: 0;
+    padding: 0 16px;
     grid-area: description;
 }
 
 @media screen and (min-width: 320px) {
     .place__description {
-        margin: 32px 0 0 16px;
+        margin-top: 32px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__description {
-        margin: 0;
+        margin-top: 0;
     }
 }
-
-
