--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,6 @@
 .place__image {
-    grid-area: image;
     margin: 0 auto;
+    grid-area: image;
     object-fit: cover;
 }
 
@@ -10,12 +10,12 @@
 
 @media screen and (min-width: 320px) {
     .place__image {
-        margin: 32px auto 0 auto;
+        margin-top: 32px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__image {
-        margin: 0 auto;
+        margin-top: 0;
     }
 }
