--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,7 @@
 .place__link {
     margin: 12px 0 0 0;
+    padding: 0;
     display: block;
-    color: #FFFFFF;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -11,12 +11,12 @@
 
 @media screen and (min-width: 320px) {
     .place__link {
-        margin: 0 0 0 16px;
+        padding-left: 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__link {
-        margin: 0;
+        padding-left: 0;
     }
 }
