--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title {
     font-family: "Inter Black";
     margin: 0;
+    padding: 0;
     grid-area: title;
     font-size: 4.5rem;
     font-weight: 900;
@@ -12,7 +13,7 @@
 
 @media screen and (min-width: 320px) {
     .place__title {
-        margin: 0 0 0 16px;
+        padding-left: 16px;
         font-size: 2rem;
         line-height: 35px;
     }
@@ -20,6 +21,6 @@
 
 @media screen and (min-width: 768px) {
     .place__title {
-        margin: 0;
+        padding-left: 0;
     }
 }
