--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,6 @@
 .place__url-heading {
     margin: 0;
+    padding: 0;
     color: #AAAAAA;
     font-size: 12px;
     font-weight: 400;
@@ -10,12 +11,12 @@
 
 @media screen and (min-width: 320px) {
     .place__url-heading {
-        margin: 0 0 0 16px;
+        padding-left: 16px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .place__url-heading {
-        margin: 0;
+        padding-left: 0;
     }
 }
