--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,42 +1,46 @@
 .place {
-    margin: 80px 0 0 0;
+    margin: 80px auto 0 auto;
     display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(340px, -webkit-max-content));
     grid-template-columns: repeat(auto-fit, minmax(340px, max-content));
     -ms-grid-rows: auto 48px auto;
-        grid-template-areas: 'title links' 'image description';
+    grid-template-areas: 'title links' 'image description';
     grid-gap: 48px 40px;
     justify-items: start;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
+}
+
+.place:first-child {
+    margin-top: 0;
 }
 
 @media screen and (min-width: 320px) {
     .place {
-        margin: 50px 0 0 0;
+        margin-top: 50px;
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
         -ms-grid-rows: auto 48px auto 48px auto 48px auto;
-            grid-template-areas: 'title' 'links' 'image' 'description';
+        grid-template-areas: 'title' 'links' 'image' 'description';
     }
 }
 
 @media screen and (min-width: 768px) {
     .place {
-        margin: 73px 0 0 0;
+        margin-top: 73px;
         -ms-grid-columns: 340px 28px 1fr;
         grid-template-columns: 340px 1fr;
         -ms-grid-rows: auto 48px auto;
-            grid-template-areas: 'title links' 'image description';
+        grid-template-areas: 'title links' 'image description';
         gap: 48px 28px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .place {
-        margin: 80px 0 0 0;
+        margin-top: 80px;
         -ms-grid-columns: 440px 40px 1fr;
         grid-template-columns: 440px 1fr;
     }
