--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,5 @@
 .places {
-    margin: 12px 148px 0 148px;
+    margin: 92px 148px 0 148px;
 }
 
 @media screen and (min-width: 320px) {
@@ -16,12 +16,12 @@
 
 @media screen and (min-width: 1024px) {
     .places {
-        margin: 12px 48px 0 48px;
+        margin: 92px 48px 0 48px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .places {
-        margin: 12px 0 0 148px;
+        margin-left: 148px;
     }
 }
