--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,19 @@
 /* обнуляющие стили (NORMALIZE)*/
+
 @import url(../vendor/normalize.css);
 
 /* шрифты FONTS */
+
 @import url(../vendor/fonts/fonts.css);
 
 /* обертка главной страницы (ROOT) */
+
 @import url(../blocks/root/root.css);
+
+/* Элемент LINK */
+
+@import url(../blocks/link/link.css);
+
 /* блок HEADER */
 
 @import url(../blocks/header/header.css);
@@ -14,6 +22,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 /* блок LEAD */
+
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image-background/lead__image-background.css);
@@ -23,6 +32,7 @@
 @import url(../blocks/lead/__title/lead__title.css);
 
 /* блок INTRO */
+
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__text/intro__text.css);
@@ -31,13 +41,16 @@
 @import url(../blocks/intro/__list-item/intro__list-item.css);
 
 /* блок PHOTO-GRID*/
+
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 /* блок PLACES*/
+
 @import url(../blocks/places/places.css);
 
 /* блок PLACE*/
+
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__description/place__description.css);
 @import url(../blocks/place/__image/place__image.css);
@@ -48,6 +61,7 @@
 @import url(../blocks/place/__website/place__website.css);
 
 /* блок COVER*/
+
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__headings/cover__headings.css);
@@ -55,6 +69,7 @@
 @import url(../blocks/cover/__title/cover__title.css);
 
 /* блок FOOTER*/
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
