--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -24,6 +24,7 @@
         grid-template-columns: 1fr;
         -ms-grid-rows: auto 48px auto 48px auto 48px auto;
         grid-template-areas: 'title' 'links' 'image' 'description';
+        gap: 0;
     }
 }
 
