--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,6 +3,7 @@
   
   .root {
       min-width: 320px;
+      width: 100%;
       margin: 0 auto;
       background-color: #2A2C2F;
       font-family: "Inter Regular";
